--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.22.0",
     "bootswatch": "^5.1.1",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-axios": "^2.0.5",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "sweetalert2": "^11.1.7",
+    "sweetalert2-react": "^0.8.3",
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
