--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,18 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "bootswatch": "^5.1.1",
+    "date-fns": "^2.0.0-beta.5",
     "formik": "^2.2.9",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
     "react-bootstrap-sweetalert": "^5.2.0",
+    "react-data-table-component": "^7.4.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "stripe": "^8.180.0",
+    "styled-components": "^5.3.1",
     "sweetalert2": "^11.1.7",
     "sweetalert2-react": "^0.8.3",
     "web-vitals": "^1.1.2",
