--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "create-file": "^1.0.1",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
@@ -28,7 +29,7 @@
     "morgan": "~1.9.1",
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
-    "stripe": "^8.178.0",
+    "stripe": "^8.181.0",
     "swagger-ui-express": "^4.1.6",
     "ts-node": "^10.2.1",
     "uuid": "^8.3.2",
