Registro de usuario

--- a/backend/appsettings.development.json
+++ b/backend/appsettings.development.json
@@ -29,8 +29,8 @@
         "Logs": {
             "apply": true,
             "binnacleLog": false,
-            "errorLog": true
+            "errorLog": false
         }
     },
-    "applySeeders": false
+    "applySeeders": true
 }
