--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootswatch": "^5.1.1",
     "date-fns": "^2.0.0-beta.5",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-axios": "^2.0.5",
