--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,9 @@
     "sweetalert2": "^11.1.7",
     "sweetalert2-react": "^0.8.3",
     "web-vitals": "^1.1.2",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "@stripe/react-stripe-js": "^1.5.0",
+    "@stripe/stripe-js": "^1.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
