--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "build": "run-p -l type-check build:prod"
   },
   "dependencies": {
+    "@types/stripe": "^8.0.417",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -29,7 +30,7 @@
     "morgan": "~1.9.1",
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
-    "stripe": "^8.181.0",
+    "stripe": "^8.186.1",
     "swagger-ui-express": "^4.1.6",
     "ts-node": "^10.2.1",
     "uuid": "^8.3.2",
