Modificado endpoints de store

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "mongodb://localhost:27017/tiendaStripe"
+        "DefaultConnection": "mongodb+srv://arbolcasaperro:arbolcasaperro@cluster0.lgk3x.mongodb.net/tiendaStripe"
     },
     "Smtp": {
         "SmtpServidor": "smtp.gmail.com",
