--- a/backend/appsettings.development.json
+++ b/backend/appsettings.development.json
@@ -4,8 +4,8 @@
     },
     "Smtp": {
         "SmtpServidor": "smtp.gmail.com",
-        "Mail": "sbv20200@gmail.com",
-        "PasswordMail": "268415951",
+        "Mail": "email@gmail.com",
+        "PasswordMail": "*",
         "Port": 587,
         "TLS": false
     },
